--- a/bloc/style/leaveword.less
+++ b/bloc/style/leaveword.less
@@ -18,6 +18,11 @@
                 width: 70px;
                 height: 70px;
                 background: #ccc;
+                img{
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                }
             }
             .name-text{
                 margin-left: 85px;
