--- a/bloc/page/css/style/css.less
+++ b/bloc/page/css/style/css.less
@@ -307,7 +307,7 @@
             display: inline-block;
             vertical-align: top;
             margin-left: 10px;
-            animation: Rotate 3s linear;
+            //animation: Rotate 3s linear;
         }
         .datu-box .shdow{
             width: 17px;
