--- a/bloc/page/css/style/cssLayout.less
+++ b/bloc/page/css/style/cssLayout.less
@@ -24,6 +24,7 @@
         color:#ffffff;
         text-align: center;
         line-height: 200px;
+        padding-bottom: 20px;
         .left-part{
             float: left;
             width: 200px;
@@ -41,6 +42,242 @@
             width: 200px;
             height: 100%;
             background: #3d9be1;
+        }
+    }
+    .position-layout{
+        height: 200px;
+        position: relative;
+        margin-bottom: 20px;
+        .top-part{
+            width: 100%;
+            height: 30px;
+            background: #3d9be1;
+            position: absolute;
+            top:0;
+            left: 0;
+            z-index: 1000;
+            line-height: 30px;
+            text-align: center;
+            color: #ffffff;
+        }
+        .left-part{
+            width: 60px;
+            height: 100%;
+            padding-top: 30px;
+            box-sizing: border-box;
+            background: #3d9be1;
+            position: absolute;
+            top:0;
+            left: 0;
+            line-height: 170px;
+            text-align: center;
+            color: #ffffff;
+        }
+        .content-part{
+            padding: 30px 0 0 60px;
+            height: 200px;
+            box-sizing: border-box;
+            background: #b7e4fd;
+            line-height: 170px;
+            text-align: center;
+            color: #ffffff;
+        }
+    }
+
+    //flex布局
+    .flex-layout{
+        overflow: hidden;
+        .introduce{
+            line-height: 40px;
+            font-size: 18px;
+            ul{
+                padding-left: 40px
+            }
+            li{
+                list-style-type: disc;
+            }
+        }
+        .direction{
+            width: 23%;
+            margin:0 2% 0 0;
+            display: flex;
+            height: 200px;
+            background: #b7e4fc;
+            float: left;
+        }
+        .direction-row{
+            flex-direction:row;
+            div{
+                width: 40px;
+                height: 40px;
+                margin: 5px;
+                background: #3d9be1;
+                color:#ffffff;
+                text-align: center;
+                line-height: 40px;
+            }
+        }
+        .direction-row-reverse{
+            flex-direction:row-reverse;
+            div{
+                width: 40px;
+                height: 40px;
+                margin: 5px;
+                background: #3d9be1;
+                color:#ffffff;
+                text-align: center;
+                line-height: 40px;
+            }
+        }
+        .direction-column{
+            flex-direction:column;
+            div{
+                width: 40px;
+                height: 40px;
+                margin: 5px;
+                background: #3d9be1;
+                color:#ffffff;
+                text-align: center;
+                line-height: 40px;
+            }
+        }
+        .direction-column-reverse{
+            flex-direction:column-reverse;
+            div{
+                width: 40px;
+                height: 40px;
+                margin: 5px;
+                background: #3d9be1;
+                color:#ffffff;
+                text-align: center;
+                line-height: 40px;
+            }
+        }
+        .flex-wrap{
+            flex-wrap: nowrap;
+            div{
+                width: 40px;
+                height: 40px;
+                margin: 5px;
+                background: #3d9be1;
+                color:#ffffff;
+                text-align: center;
+                line-height: 40px;
+            }
+        }
+        .flex-wrap-wrap{
+            flex-wrap: wrap;
+            div{
+                width: 40px;
+                height: 40px;
+                margin: 5px;
+                background: #3d9be1;
+                color:#ffffff;
+                text-align: center;
+                line-height: 40px;
+            }
+        }
+        .flex-wrap-wrap-reverse{
+            flex-wrap: wrap-reverse;
+            div{
+                width: 40px;
+                height: 40px;
+                margin: 5px;
+                background: #3d9be1;
+                color:#ffffff;
+                text-align: center;
+                line-height: 40px;
+            }
+        }
+
+        .justify-content{
+            display: flex;
+            height: 80px;
+            background: #b7e4fc;
+            margin-bottom: 10px;
+            div:nth-child(1){
+                width: 100px;
+                height: 60px;
+                margin: 10px;
+                background: #3d9be1;
+            }
+            div:nth-child(2){
+                width: 200px;
+                height: 60px;
+                margin: 10px;
+                background: #3d9be1;
+            }
+            div:nth-child(3){
+                width: 150px;
+                height: 60px;
+                margin: 10px;
+                background: #3d9be1;
+            }
+        }
+        .justify-content:nth-child(1){
+            justify-content:flex-start;
+        }
+        .justify-content:nth-child(2){
+            justify-content:flex-end;
+        }
+        .justify-content:nth-child(3){
+            justify-content:center;
+        }
+        .justify-content:nth-child(4){
+            justify-content:space-between;
+        }
+        .justify-content:nth-child(5){
+            justify-content:space-around;
+        }
+
+        .align-items{
+            display: flex;
+            height: 200px;
+            width: 48%;
+            background: #b7e4fc;
+            margin: 10px 1%;
+            float: left;
+            div{
+                color:#ffffff;
+                font-size: 15px;
+                text-align: center;
+            }
+            div:nth-child(1){
+                width: 100px;
+                min-height: 60px;
+                margin: 10px;
+                background: #3d9be1;
+                line-height: 60px;
+            }
+            div:nth-child(2){
+                width: 200px;
+                min-height: 150px;
+                margin: 10px;
+                background: #3d9be1;
+                line-height: 100px;
+            }
+            div:nth-child(3){
+                width: 150px;
+                min-height: 100px;
+                margin: 10px;
+                background: #3d9be1;
+                line-height: 80px;
+            }
+        }
+        .align-items:nth-child(1){
+            align-items:flex-start;
+        }
+        .align-items:nth-child(2){
+            align-items:flex-end;
+        }
+        .align-items:nth-child(3){
+            align-items:center;
+        }
+        .align-items:nth-child(4){
+            align-items:stretch;
+        }
+        .align-items:nth-child(5){
+            align-items:baseline;
         }
     }
 }
