--- a/bloc/style/leaveword.less
+++ b/bloc/style/leaveword.less
@@ -99,6 +99,26 @@
             }
         }
     }
+    .pagination{
+        text-align: right;
+        margin-top: 10px;
+        .page{
+            width: 35px;
+            height: 35px;
+            border:1px solid #e2dfdf;
+            border-radius: 5px;
+            background: #ffffff;
+            text-align: center;
+            line-height: 35px;
+            cursor: pointer;
+            font-size: 15px;
+            margin-left: 5px;
+            display: inline-block;
+        }
+        .page.active{
+            border-color:#8890e8;
+        }
+    }
 }
 .allDrop{
     position: fixed;
