--- a/bloc/style/index.less
+++ b/bloc/style/index.less
@@ -162,13 +162,19 @@
                     .list-l{
                         width: 240px;
                         height: 150px;
-                        background: #ccc;
+                        background: #5d9ee2;
                         border-radius: 5px;
                         text-align: center;
                         line-height: 150px;
                         font-size: 4rem;
                         font-weight: 700;
                         color:#ffffff;
+                    }
+                    .list-l.css{
+                        background: #5d9ee2;
+                    }
+                    .list-l.js{
+                        background: #ca4c4c;
                     }
                     .list-content{
                         padding: 10px 0 0 20px;
