--- a/bloc/style/common.less
+++ b/bloc/style/common.less
@@ -36,3 +36,19 @@ td{
     border-bottom: 1px solid #ccc;
     border-right: 1px solid #ccc;
 }
+
+.mt15{margin-top: 15px}
+.mt10{margin-top: 10px}
+
+.sub-title{
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+
+.fw700{
+    font-weight: 700;
+}
+
+.blue{
+    color:blue;
+}
