--- a/bloc/style/common.less
+++ b/bloc/style/common.less
@@ -27,6 +27,9 @@ a{
 .right{
     float: right;
 }
+.c-right{
+    float: right;
+}
 table{
     border-top:1px solid #ccc;
     border-left:1px solid #ccc
