--- a/bloc/component/toast/toast.less
+++ b/bloc/component/toast/toast.less
@@ -45,6 +45,7 @@ to {opacity:1;}
     box-shadow: 0px 0px 10px #d0caca;
     border-radius: 7px;
     color:#f9702e;
+    z-index: 10000;
 }
 
 .c-toast-left-top{
