代码高亮处理

--- a/bloc/style/interview.less
+++ b/bloc/style/interview.less
@@ -1,6 +1,6 @@
 .interview{
     position: fixed;
-    background: #b7e4fb;
+    background: #f7f7f7;
     width: 100%;
     overflow: scroll;
     height: 100%;
