--- a/bloc/component/form/form.less
+++ b/bloc/component/form/form.less
@@ -11,6 +11,9 @@
 .c-error{
     border:1px solid red !important;
 }
+.c-success{
+    border:1px solid #208eee !important;
+}
 .c-error:after{
     content: "asdasd";
     display: block;
