react组件页面修改

--- a/bloc/component/dlog/dlog.less
+++ b/bloc/component/dlog/dlog.less
@@ -45,6 +45,23 @@ to {opacity:0;}
         .c-dlog-content{
             padding: 15px;
             min-height: 40px;
+            .dlog-content{
+                display: inline-block;
+                margin-left: 10px;
+                font-size: 18px;
+            }
+            .error{
+                color: red;
+                font-size: 40px;
+            }
+            .warning{
+                color: #ff8800;
+                font-size: 40px;
+            }
+            .success{
+                color: green;
+                font-size: 40px;
+            }
         }
         .c-dlog-bottom{
             height: 40px;
