loading新增动画效果

--- a/bloc/style/common.less
+++ b/bloc/style/common.less
@@ -64,3 +64,12 @@ td{
 .green{
     color:green;
 }
+
+@keyframes loadingMoving{
+    from {transform: rotate(0deg)}
+    to {transform: rotate(360deg)}
+}
+
+.loading-animate{
+    animation:loadingMoving 2s infinite linear;
+}
