--- a/bloc/style/index.less
+++ b/bloc/style/index.less
@@ -53,6 +53,7 @@
     //首页内容主体样式
     .index-content{
         //banner部分
+        min-width:1200px;
         .banner-content{
             margin-top: 1.5rem;
             margin-bottom: 1.5rem;
@@ -111,6 +112,7 @@
                     position: absolute;
                     top: 0;
                     left: 0;
+                    min-height: 100%;
                 }
                 &:hover img{
                     filter: blur(2px);
